--- a/src/app/present-list/present-list.component.html
+++ b/src/app/present-list/present-list.component.html
@@ -1,6 +1,26 @@
 <h3>Here are some presents to help you start: </h3>
 <ul>
   <li class="text" *ngFor="let present of presents | async">
-    {{present.name}}
+    <p>
+      Present: {{ present.present }}
+    </p>
+    <p>
+      From: {{ present.fromFamilyMember }}
+    </p>
+    <p>
+      To: {{ present.toFamilyMember }}
+    </p>
+    <p>
+      Present Image: {{ present.image }}
+    </p>
+    <p>
+      Rating: {{ present.rating }}
+    </p>
+    <p>
+      Date Opened: {{ present.dateOpened }}
+    </p>
+    <p>
+      Letter Sent: {{ present.letterSent }}
+    </p>
   </li>
 </ul>
