update working, simnple CRUD working, working on register

--- a/src/app/add-present/add-present.component.html
+++ b/src/app/add-present/add-present.component.html
@@ -10,8 +10,7 @@
         id="newPresent"
         type="text"
         placeholder="Enter Type of Present"
-        required
-        >
+        required>
       </div>
       <div class="form-entry">
         <label for="presentFrom">Present From:</label>
@@ -22,8 +21,7 @@
         id="presentFrom"
         type="text"
         placeholder="Enter Name"
-        required
-        >
+        required>
       </div>
       <div class="form-entry">
         <label for="presentTo">Present To:</label>
@@ -34,8 +32,7 @@
         id="presentTo"
         type="text"
         placeholder="Enter Name"
-        required
-        >
+        required>
       </div>
       <div class="form-entry">
         <label for="presentImage">Image of Present:</label>
@@ -46,8 +43,7 @@
         id="presentImage"
         type="text"
         placeholder="Upload Image"
-        required
-        >
+        required>
       </div>
       <div class="form-entry">
         <label for="presentRating">Present Rating:</label>
@@ -60,8 +56,7 @@
         min="0"
         max="5"
         placeholder="Select Rating"
-        required
-        >
+        required>
       </div>
       <div class="form-entry">
         <label for="presentDateOpened">Present Date Opened:</label>
@@ -72,20 +67,8 @@
         id="presentDateOpened"
         type="date"
         placeholder="Select Date Opened"
-        required
-        >
+        required>
       </div>
-      <div class="form-entry">
-        <label for="presentLetterSent">Present:</label>
-        <input
-        [(ngModel)]="letterSent"
-        name="presentLetterSent"
-        class="form-control"
-        id="presentLetterSent"
-        type="checkbox"
-        required
-        >
-      </div>
-      <button type="submit" class="btn btn-primary">Add Present:</button>
+      <button type="submit" class="btn btn-primary">Add Present</button>
   </form>
 </div>
