--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,6 @@
-<p>
-  register works!
-</p>
+<h3>Register</h3>
+<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    
+  </div>
+</form>
