--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,5 +4,6 @@
   </h1>
   <img width="300" alt="Angular Logo" src="https://pics.me.me/shh-dont-wa-your-par-is-not-santa-santa-came-22741240.png">
 </div>
+<button class="btn btn-lg btn-danger" (click)="logout()">Logout</button>
 <app-add-present></app-add-present>
 <app-present-list></app-present-list>
