login working, fixed lint errors

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <h3 class="text-center mt-4">Register</h3>
 <form class="form-signin text-center p-3"  #registerForm="ngForm" (ngSubmit)="register(registerForm.value)">
-  <div class="mt-4 mb-3">
+  <div class="mt-4 mb-4">
     <div class="form-group">
       <label for="firstName">First Name</label>
       <input 
@@ -49,8 +49,7 @@
       <label class="error mt-3 text-danger" *ngIf="errorMessage">{{ errorMessage }}</label>
     </div>
     <button type="submit" class="btn btn-lg btn-success btn-block mb-3">Register</button>
-    <p>{{ registerForm.value | json }} </p>
-    <p>Already have an account? <a routerLink="/login">Log in</a></p>      
+    <p><a routerLink="/login">Log in</a></p>      
   </div>
 </form>
 
