timestamp being sent to firebase

--- a/src/app/add-present/add-present.component.html
+++ b/src/app/add-present/add-present.component.html
@@ -58,7 +58,7 @@
         placeholder="Select Rating"
         required>
       </div>
-      <div class="form-entry">
+      <!-- <div class="form-entry">
         <label for="presentDateOpened">Present Date Opened:</label>
         <input
         [(ngModel)]="dateOpened"
@@ -68,7 +68,7 @@
         type="date"
         placeholder="Select Date Opened"
         required>
-      </div>
+      </div> -->
       <button type="submit" class="btn btn-primary">Add Present</button>
   </form>
 </div>
