--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <a class="nav-link" href="/present-list">Present's List</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Letters</a>
+    <a class="nav-link" href="/letter-list">Letters</a>
   </li>
   <li class="ml-auto p-2">
     Hi, {{ aFAuth.user?.email }}!
@@ -21,5 +21,5 @@
 <!-- <button class="btn btn-lg btn-danger" (click)="logout()">Logout</button> -->
 <div class="container">
   <app-add-present></app-add-present>
-  <app-present-list></app-present-list> 
+  <app-present-list></app-present-list>
 </div>
