--- a/src/app/add-present/add-present.component.html
+++ b/src/app/add-present/add-present.component.html
@@ -1,6 +1,6 @@
-<h3>Add a present </h3>
+<h3 class="text-center">Add a present</h3>
 <div class="addpresent">
-  <form class="present-entry" #presentForm="ngForm" (ngSubmit)="onSubmit(presentForm.value)">
+  <form class="present-entry m-5" #presentForm="ngForm" (ngSubmit)="onSubmit(presentForm.value)">
       <div class="form-entry">
         <label for="newPresent">Present:</label>
         <input
@@ -58,17 +58,8 @@
         placeholder="Select Rating"
         required>
       </div>
-      <!-- <div class="form-entry">
-        <label for="presentDateOpened">Present Date Opened:</label>
-        <input
-        [(ngModel)]="dateOpened"
-        name="presentDateOpened"
-        class="form-control"
-        id="presentDateOpened"
-        type="date"
-        placeholder="Select Date Opened"
-        required>
-      </div> -->
-      <button type="submit" class="btn btn-primary">Add Present</button>
+      <div class="text-center">
+        <button type="submit" class="btn btn-info mt-3">Add Present</button>
+      </div>
   </form>
 </div>
